# PyTOUGHREACT

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  GENER  LICENSE  MESH  MESHA  MESHB  OUTPUT  README.md  chemical.inp  core.py  iter.out  kdd_conc.tec  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  screen_info.out  setup.cfg  setup.py  setup.py~80ed6d9e4e94e150598b3b6f90b6216559889fe1  solute.inp  solute2.inp  test2.txt  tox.ini
.github/workflows/: bandit.yml  draft-pdf.yml  tests.yml
docs/: documentation.docx  ~$cumentation.docx  ~$er_guide.docx
docs/publication/: paper.bib  paper.md
documentation/: chemical.inp  chemical.rst  conf.py  constants.rst  contributing.rst  dependencies.rst  developer.rst  exceptions.rst  getting.rst  index.rst  installation.rst  model.rst  modules.rst  plotting.rst  pytoughreact.constants.rst  pytoughreact.exceptions.rst  pytoughreact.model.rst  pytoughreact.plotting.rst  pytoughreact.pytough_wrapper.rst  pytoughreact.pytough_wrapper.wrapper.rst  pytoughreact.results.rst  pytoughreact.rst  pytoughreact.utilities.rst  pytoughreact.writers.rst  results.rst  solute.inp  technical.rst  tutorial.rst  utilities.rst  wrapper.rst  writers.rst
documentation/_build/doctrees/: PyTOUGHREACT.doctree  PyTOUGHREACT.examples.doctree  PyTOUGHREACT.pytoughreact.assembler.doctree  PyTOUGHREACT.pytoughreact.chemical.doctree  PyTOUGHREACT.pytoughreact.constants.doctree  PyTOUGHREACT.pytoughreact.doctree  PyTOUGHREACT.pytoughreact.exceptions.doctree  PyTOUGHREACT.pytoughreact.model.doctree  PyTOUGHREACT.pytoughreact.numerical.doctree  PyTOUGHREACT.pytoughreact.plotting.doctree  PyTOUGHREACT.pytoughreact.pytough_wrapper.doctree  PyTOUGHREACT.pytoughreact.pytough_wrapper.wrapper.doctree  PyTOUGHREACT.pytoughreact.results.doctree  PyTOUGHREACT.pytoughreact.utilities.doctree  PyTOUGHREACT.pytoughreact.writers.doctree  PyTOUGHREACT.test.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  pytoughreact.assembler.doctree  pytoughreact.chemical.doctree  pytoughreact.constants.doctree  pytoughreact.exceptions.doctree  pytoughreact.model.doctree  pytoughreact.numerical.doctree  pytoughreact.plotting.doctree  pytoughreact.pytough_wrapper.doctree  pytoughreact.pytough_wrapper.wrapper.doctree  pytoughreact.results.doctree  pytoughreact.utilities.doctree  pytoughreact.writers.doctree  results.doctree
documentation/_build/html/: .buildinfo  PyTOUGHREACT.examples.html  PyTOUGHREACT.html  PyTOUGHREACT.pytoughreact.html  (+45 more)
example_files/folder_1/: MESH  test.txt  test2.txt
example_files/folder_2/: MESH  test.txt  test2.txt
example_files/folder_3/: MESH  test2.txt
examples/: run_react.py
examples/example_bio/: MESH  OUTPUT_CONNE.csv  read_bio.py  result_bio.py  run_bio.py  test.txt  test2.txt
examples/example_react/: read_react.py  result_react.py  run_react.py  screen_info.out  test.txt  test2.txt
paper/: paper.bib  paper.md
pytoughreact/: __init__.py  run_bio.py  run_react.py
pytoughreact.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytoughreact/ChemicalCompositions/: mineral.py  zone.py
pytoughreact/Domain/: domain.py
pytoughreact/Grid/: grid.py
pytoughreact/chemical/: bio_process_description.py  chemical_composition.py  kinetic_properties.py  mineral_composition.py  perm_poro_zone.py
pytoughreact/constants/: default_minerals.py  defaults_constants.py  format_specifications.py  generalconstants.py  grid_constants.py  plotconstants.py
pytoughreact/exceptions/: custom_error.py
pytoughreact/model/: __init__.py  capillary_pressure.py  physical_model.py
pytoughreact/numerical/: physical_model_numericals.py
pytoughreact/pytough/: IAPWS97.py  customError.py  fixed_format_file.py  geometry.py  mulgrids.py  t2bio.py  t2bioresults.py  t2chemical.py  t2components.py  t2data.py  t2grids.py  t2incons.py  t2listing.py  t2process.py  t2react.py  t2reactgrids.py  t2reactresult.py  t2result.py  t2solute.py  t2thermo.py  t2utilities.py
pytoughreact/results/: multi_result_tough_3.py  multi_result_tough_react.py  result_multiple.py  result_single.py  result_tough_3.py  result_tough_react.py
pytoughreact/test/: bio_test_case.py  context.py
pytoughreact/utilities/: synergy_general_utilities.py  synergy_tough_react_utilities.py
pytoughreact/writers/: bio_writing.py  chemical_writing.py  react_writing.py  solute_writing.py
src/: result_bio.py  run.py  run_bio.py  run_react.py  run_result.py
src/chemical/: bio_process_description.py  biomass_composition.py  chemical_composition.py  kinetic_properties.py  mineral_composition.py  mineral_description.py  mineral_zone.py  perm_poro_zone.py
src/constants/: cap_pressure_constants.py  default_minerals.py  defaults_constants.py  format_specifications.py  generalconstants.py  grid_constants.py  plotconstants.py  reactionconstants.py  rel_perm_constants.py  sections.py
src/exceptions/: custom_error.py
src/model/: capillary_pressure.py  grid.py  physical_model.py  relative_permeability.py
src/numerical/: physical_model_numericals.py
src/plotting/: plot_multiple_files_routine.py  plot_multiple_tough_routine.py  plot_tough_routine.py
src/pytoughreact/: __init__.py  result_bio.py  run.py  run_bio.py  run_react.py
src/results/: multi_result_tough_3.py  multi_result_tough_react.py  result_multiple.py  result_single.py  result_tough_3.py  result_tough_react.py  results.py  simple_experiment_data.py
src/utilities/: synergy_general_utilities.py  synergy_tough_react_utilities.py
src/writers/: bio_writing.py  chemical_writing.py  react_writing.py  solute_writing.py
test/: MESH  bio_test_case.py  chemical.inp  context.py  flow.inp  flow2.inp  flow_read.inp  kdd_conc.tec  react_test_case.py  test.txt  test2.txt  test_pytoughreact_bio.py  test_pytoughreact_react.py  test_react_writing.py  test_t2reactgrid.py
tests/: INFILE  MESH  OUTPUT_ELEME.csv  SAVE  VERS  chdump.out  chemical.out  flow.inp  flow.out  iter.out  kdd_conc.tec  kdd_gas.tec  kdd_min.tec  kdd_tim.tec  run_tests.py  runlog.out  savechem  screen_info.out  solute.out  test.txt  test2.txt
(+141 files in other folders)
