[build-system]
requires = ["setuptools>=61.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=pytoughreact"
testpaths = [
    "test",
]

[project]
name = "pytoughreact"
version = "1.0.3"
dependencies = [
  "numpy>=1",
  "scipy>"=1,
  "vtk>=1",
  "matplotlib>=3",
  "pandas>=1",
  "PYTOUGH @ git+https://git@github.com/acroucher/PYTOUGH.git",
]
requires-python = ">= 3.7"
authors = [
  {name = "Temitope Ajayi", email = "ajayi_temmy@yahoo.com"},
]
maintainers = [
  {name = "Temitope Ajayi", email = "ajayi_temmy@yahoo.com"}
]
description = "Python Library for automating reaction simulations using TOUGHREACT, TMVOC and TMVOC-BIO"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["biodegradation", "reactive transport", "automation", "uncertainty quantification"]



[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "*/model/*",
    "*/constants/*",
    "*/exceptions/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "utils/tirefire.py",
    ]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
