[build-system]
requires = ["setuptools>=61.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=pytoughreact"
testpaths = [
    "test",
]

[project]
name = "pytoughreact"
version = "1.0.3"
dependencies = [
  "numpy>=1",
  "scipy>=1",
  "vtk>=1",
  "matplotlib>=3",
  "pandas>=1",
  "PyTOUGH",
  "flake8"
]

classifiers = [
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

requires-python = ">= 3.7"
readme = "README.md"
authors = [
  {name = "Temitope Ajayi", email = "ajayi_temmy@yahoo.com"},
]
maintainers = [
  {name = "Temitope Ajayi", email = "ajayi_temmy@yahoo.com"}
]
description = "Python Library for automating reaction simulations using TOUGHREACT, TMVOC and TMVOC-BIO"
license = {text = "MIT License"}
keywords = ["biodegradation", "reactive transport", "automation", "uncertainty quantification"]

[project.urls]
repository = "https://github.com/temmy222/PyTOUGHREACT"



[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "*/model/*",
    "*/constants/*",
    "*/exceptions/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "utils/tirefire.py",
    ]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
