[metadata]
name = pytoughreact
description = Python Library for automating reaction simulations using TOUGHREACT, TMVOC and TMVOC-BIO
author = Temitope Ajayi
author_email = ajayi_temmy@yahoo.com
license = MIT
license_file = LICENSE 
platforms = unix, linux, osx, cygwin, win32
classfiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pytoughreact
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
